tests/negative/shift_overflow.far
fun main() { return 1 << 63 }
